--- a/farmacia.html
+++ b/farmacia.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Farmaciaaaadadad</title>
+  <title>Farmacia</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./estilos/style.css">
 </head>
 <body>
-  <header>
+  <header class="sticky-top">
     <div class="d-flex align-items-center h-100 justify-content-evenly">
 
         <img class="h-50" src="./images/imagen22.jpg" alt="logo">
@@ -48,10 +48,32 @@
                 <h1>Franco PetShop</h1>
             </div>
             
+            <!-- iconos mail y carrito -->
             <div>
-                <a href="mailto:francopetshop@gmail.com" target="_blank"
-                class="dropbtn">✉francopetshop@gmail.com</a>
-            </div>
+              <a  href="mailto:francopetshop@gmail.com" target="_blank"
+              class="dropbtn"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <rect x="3" y="5" width="18" height="14" rx="2" />
+                  <polyline points="3 7 12 13 21 7" />
+                </svg></a>
+
+          <a  type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <circle cx="6" cy="19" r="2" />
+              <circle cx="17" cy="19" r="2" />
+              <path d="M17 17h-11v-14h-2" />
+              <path d="M6 5l14 1l-1 7h-13" />
+            </svg></a>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+          <div class="offcanvas-header">
+          <h5 id="offcanvasRightLabel">Carrito</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+              <div class="offcanvas-body">
+                      ...
+          </div>
+              </div>
+          </div>
     </div>
 </header>
   <main>
