--- a/juguetes.html
+++ b/juguetes.html
@@ -61,13 +61,14 @@
         <button class="btn btn-primary" v-on:click="mostrarCarritoDeCompras">Carrito</button>
       </div>
 
-
+      <!-- muestra carrito(vacio o con productos) -->
       <div v-if="mostrarCarrito == true">
         <div v-if="carrito.length == 0">
           <p>carrito vacio</p>
           <button class="btn btn-primary" v-on:click="seguirComprando">Seguir comprando</button>
         </div>
 
+        <!-- carrito con productos -->
         <div class="d-flex justify-content-center" v-else>
           <div class="d-flex justify-content-between row gap-3 w-75">
             <div class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in carrito">
@@ -88,7 +89,8 @@
             </div>
           </div>
           <div>
-            <button href="#" class="btn btn-primary  btn-sm" v-on:click="">Comprar</button>
+            <!-- llama a funcion q te devuelve a la pag con las cards de compra(poner modal intermedio que informe q la compra fue exitosa) -->
+            <button class="btn btn-primary  btn-sm" v-on:click="finalizarCompra">Comprar</button>
           </div>
           <div>
             <button class="btn btn-primary" v-on:click="seguirComprando">Seguir comprando</button>
@@ -96,6 +98,7 @@
         </div>
       </div>
 
+      <!-- muestra cards estaticas de compra -->
       <div class="d-flex justify-content-center" v-else>
         <div class="d-flex justify-content-between row gap-3 w-75">
           <div class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in juguetes">
@@ -111,11 +114,17 @@
                   <li class="cart-text">{{juguete.descripcion}}</li>
                 </ul>
               </div>
-              <button href="#" class="btn btn-primary  btn-sm" v-on:click="aniadirACarrito(juguete)">Agregar al carrito</button>
+              <!-- cartel que muestra el stock, en caso de tener menos de 5 unidades, lo muestra animado para captar la atencion del publico -->
+              <button class="btn btn-primary  btn-sm" v-if="juguete.stock >= 5">{{juguete.stock}} unidades</button>
+              <button class="btn btn-primary  btn-sm" v-else> ultimas unidades!!! ({{juguete.stock}})</button>
+
+              <!-- aniade producto al carrito restandole uno a su stock (en carrito!, en productos no se actuliza el stock hasta q la compra se complete) -->
+              <button class="btn btn-primary  btn-sm" v-on:click="aniadirACarrito(juguete)">Agregar al carrito</button>
             </div>
           </div>
         </div>
       </div>
+
     </div>
   </main>
   <footer class="d-flex row d-wrap justify-content-between align-items-start">    
@@ -136,8 +145,8 @@
     <div class="d-flex col-12">
         <p id="copy-rights">Grupo G | Challenge MindHub 2022</p>
     </div>
-</footer>
-<script src="https://kit.fontawesome.com/b8d6808068.js" crossorigin="anonymous"></script>
+  </footer>
+  <script src="https://kit.fontawesome.com/b8d6808068.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
   crossorigin="anonymous"></script>
