--- a/juguetes.html
+++ b/juguetes.html
@@ -124,25 +124,45 @@
  
 
   </main>
-  <footer class="d-flex row d-wrap justify-content-between align-items-start">    
-    <div class="col-5">
-        <img src="./images/logo.png" alt="logo" class="col-1 img-fluid">
-        <p>¡Te esperamos en nuestro locales!</p>
-        <p>Rio de Janeiro 300 (Caballito)</p>
-    </div>
-    <div class="d-flex row col-4">
-        <a href="./farmacia.html"> Farmacia</a>
-        <a href="#"> Juguetes</a>
-        <a href="./contacto.html"> Contacto</a>
-    </div>
-    <div class="d-flex col-3">
-        <a class="fa-brands fa-instagram fa-2xl" href="https://www.instagram.com/mindhub_la/" ></a>
-        <a class="fa-brands fa-facebook fa-2xl" href="facebook.com" ></a>
-    </div>
-    <div class="d-flex col-12">
-        <p id="copy-rights">Grupo G | Challenge MindHub 2022</p>
-    </div>
-</footer>
+  <a href="https://www.instagram.com/mindhub_la/" class="btn-wsp position-fixed d-flex align-items-center justify-content-center" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+    <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+    <path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
+  </svg></a>
+  <footer class="d-flex  flex-wrap justify-content-between align-items-start">  
+      <div class="d-flex row col-4">
+          <p class="titulo_footer">Tienda</p>
+          <a href="./farmacia.html" >Farmacia</a>
+          <a href="./juguetes.html">Juguetes</a>
+      </div> 
+      <div class="d-flex col-4 row">
+          <a href="./contacto.html" class="titulo_footer" >Contacto</a>
+          <a href="https://www.instagram.com/mindhub_la/" target="_blank" ><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <rect x="4" y="4" width="16" height="16" rx="4" />
+              <circle cx="12" cy="12" r="3" />
+              <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+            </svg> Instagram</a>
+          <a href="facebook.com"  target="_blank" ><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+            </svg> Facebook</a>
+          <a  href="mailto:francopetshop@gmail.com"  target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <rect x="3" y="5" width="18" height="14" rx="2" />
+                  <polyline points="3 7 12 13 21 7" />
+                </svg> francopetshop@gmail.com
+          </a>
+      </div>
+      <div class="d-flex col-4 row">
+          <p class="titulo_footer">Donde encontrarnos</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.6871004429263!2d-58.43257238519495!3d-34.6120729654465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca429815227f%3A0x5d302e497c2cda87!2sR%C3%ADo%20de%20Janeiro%20300%2C%20C1405CCB%20CABA!5e0!3m2!1ses-419!2sar!4v1649964369598!5m2!1ses-419!2sar" width="150" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="d-flex col-12 ">
+          <p id="copy-rights" class="align-self-center">Grupo G | Challenge MindHub 2022</p>
+      </div>
+  </footer>
 <script src="https://kit.fontawesome.com/b8d6808068.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
