--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Franco | Home</title>
-    <link rel="stylesheet" href="./estilos/style.css">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./estilos/style.css">
 </head>
 
 <body>
@@ -107,6 +108,27 @@
                     map
                 </div>
             </div>
+
+            <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-between row gap-3 w-75">
+                <div class="card mt-5" style="width: 302px; height: 550px" v-for="producto in producMenosStock">
+                  <img v-bind:src="producto.imagen" class="card-img-top align-self-center" style="width: 300px; height: 300px;" alt="...">
+                  <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
+                    <h5 class="card-title" >{{producto.nombre}}</h5>
+                    <p class="card-text">Precio: ${{producto.precio}}</p>
+                    <div class="btn-group dropend">
+                      <button class="btn btn-secondary btn-sm dropdown-toggle bg-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Ver descripcion
+                      </button>
+                      <ul class="dropdown-menu" style="width: 300px;"> 
+                        <li class="cart-text">{{producto.descripcion}}</li>
+                      </ul>
+                    </div>
+                    <a href="#" class="btn btn-primary  btn-sm">Agregar al carrito</a>
+                  </div>
+                </div>
+              </div>
+              </div>
         </div>
     </main>
     <footer class="d-flex row d-wrap justify-content-between align-items-start">    
