--- a/juguetes.html
+++ b/juguetes.html
@@ -136,6 +136,12 @@
             <div class="card mt-5" style="width: 302px; height: 500px" v-for="juguete in juguetes">
               <img v-bind:src="juguete.imagen" class="card-img-top align-self-center" style="width: 300px; height: 300px;" alt="...">
               <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
+
+                <div class="producto d-flex justify-content-center align-items-center rounded" v-if="!(juguete.stock >5)"> 
+                  Ultimos 5 Productos
+                </div>
+                <!-- <div class="productoAgotado d-flex justify-content-center align-items-center rounded"> Producto Agotado</div> -->
+
                 <h5 class="card-title" >{{juguete.nombre}}</h5>
                 <p class="card-text">$ {{juguete.precio}}</p>
                 <div class="btn-group dropend">
@@ -147,8 +153,8 @@
                   </ul>
                 </div>
                 <!-- cartel que muestra el stock, en caso de tener menos de 5 unidades, lo muestra animado para captar la atencion del publico -->
-                <button class="btn btn-primary  btn-sm" v-if="juguete.stock >= 5">{{juguete.stock}} unidades</button>
-                <button class="btn btn-primary  btn-sm" v-else> ultimas unidades!!! ({{juguete.stock}})</button>
+                <!-- <button class="btn btn-primary  btn-sm" v-if="juguete.stock >= 5">{{juguete.stock}} unidades</button>
+                <button class="btn btn-primary  btn-sm" v-else> ultimas unidades!!! ({{juguete.stock}})</button> -->
 
                 <!-- aniade producto al carrito restandole uno a su stock (en carrito!, en productos no se actuliza el stock hasta q la compra se complete) -->
                 <button class="btn btn-primary  btn-sm" v-on:click="aniadirACarrito(juguete)">Agregar al carrito</button>
