--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
                     <a href="./contacto.html" class="dropbtn">ContactUS</a>
                 </div>
             </nav>
-                <div>
-                    <h1>Franco PetShop</h1>
+                <div class="divlogopetsohop">
+                    <!-- <h1>Franco PetShop</h1> -->
+                    <img class="logopetshop" src="./images/logo franco pet shop blanco.png" alt="">
                 </div>
                 
 
@@ -103,19 +104,19 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="./images/2204 Dinamica Online Alimentos Semana 2 Website Banner D.png" class="d-block w-100" alt="...">
+                        <img src="./images/2204 Dinamica Online Alimentos Semana 2 Website Banner D.png" class="d-block w-100" alt="imgofertas1">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/2204 Dinamica_Online_Rewards_Website_Banners_D.png" class="d-block w-100" alt="...">
+                        <img src="./images/2204 Dinamica_Online_Rewards_Website_Banners_D.png" class="d-block w-100" alt="imgofertas2">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/2204_Gato_Royal Canin_156298_Regalo_156288_Regalo_WebsiteBannerD.png" class="d-block w-100" alt="...">
+                        <img src="./images/2204_Gato_Royal Canin_156298_Regalo_156288_Regalo_WebsiteBannerD.png" class="d-block w-100" alt="imgofertas3">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/2204_Perro y Gato_Juguetes_269214_H15_221065_269042_222109_Website BannerD.png" class="d-block w-100" alt="...">
+                        <img src="./images/2204_Perro y Gato_Juguetes_269214_H15_221065_269042_222109_Website BannerD.png" class="d-block w-100" alt="imgofertas4">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/2204_Perro_Pro Plan_146002_Regalo_146081_Regalo_Website BannerD.png" class="d-block w-100" alt="...">
+                        <img src="./images/2204_Perro_Pro Plan_146002_Regalo_146081_Regalo_Website BannerD.png" class="d-block w-100" alt="imgofertas5">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -129,21 +130,21 @@
                   </div>
             </div>
 
-            <div>
+            <div >
                 <h2>Bienvenidos a mi tienda</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aperiam. Veniam accusantium nisi vel
-                    voluptatum
-                    fuga rerum ipsam sit reprehenderit repudiandae. Quidem est laudantium voluptas exercitationem amet
-                    iure enim eum?
-                </p>
-            </div>
+                
+                </div>
+
+</html>
+
+            <!-- </div>
             <div>
                 <p>Nuestra dirección es Rio de Janeiro 300 (Caballito)</p>
                 <div>
                     map
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer class="d-flex row d-wrap justify-content-between align-items-start">    
         <div class="col-5">
