--- a/juguetes.html
+++ b/juguetes.html
@@ -18,8 +18,6 @@
     <header class="sticky-top">
       <div class="d-flex align-items-center h-100">
         <nav class="d-flex align-items-center justify-content-center">
-            <img class="logo" src="./images/imagen22.jpg" alt="logo">
-
                     <div class="dropdown">
                         <a href="./index.html" class="dropbtn">Home</a>
                     </div>
@@ -45,9 +43,10 @@
                 <a href="./contacto.html" class="dropbtn">ContactUS</a>
             </div>
         </nav>
-        <div>
-          <h1>Franco PetShop</h1>
-        </div>
+        <div class="divlogopetsohop">
+ 
+          <img class="logopetshop" src="./images/logo franco pet shop blanco.png" alt="">
+      </div>
               
 
         <!-- iconos mail y carrito -->
