--- a/juguetes.html
+++ b/juguetes.html
@@ -93,6 +93,7 @@
                         <th scope="col">Precio</th>
                         <th scope="col">Unidades</th>
                         <th scope="col">subtotal</th>
+                        <th scope="col">eliminar</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -108,6 +109,13 @@
                         </td>
 
                         <td>{{calcularSubtotal(producto)}}</td>
+                        <td>
+                          <button v-on:click="eliminarDeCarrito(producto)">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                              <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+                            </svg>
+                          </button>
+                        </td>
                       </tr>
 
                     </tbody>
@@ -155,10 +163,7 @@
                     <li class="cart-text">{{juguete.descripcion}}</li>
                   </ul>
                 </div>
-                <!-- cartel que muestra el stock, en caso de tener menos de 5 unidades, lo muestra animado para captar la atencion del publico -->
-
-                <!-- <button class="btn btn-primary  btn-sm" v-if="juguete.stock >= 5">{{juguete.stock}} unidades</button>
-                <button class="btn btn-primary  btn-sm" v-else> ultimas unidades!!! ({{juguete.stock}})</button> -->
+                <div>{{juguete.stock}}</div>
 
                 <!-- aniade producto al carrito restandole uno a su stock (en carrito!, en productos no se actuliza el stock hasta q la compra se complete) -->
                 <div v-if="!juguete.estadoAgregado">
