--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.6871004429263!2d-58.43257238519495!3d-34.6120729654465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca429815227f%3A0x5d302e497c2cda87!2sR%C3%ADo%20de%20Janeiro%20300%2C%20C1405CCB%20CABA!5e0!3m2!1ses-419!2sar!4v1649964369598!5m2!1ses-419!2sar" width="150" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="d-flex col-12 ">
-            <p id="copy-rights" class="align-self-center">Grupo G | Challenge MindHub 2022</p>
+            <p id="copy-rights" class="align-self-center">Franco PetShop | Challenge MindHub 2022</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
