--- a/juguetes.html
+++ b/juguetes.html
@@ -15,8 +15,6 @@
 </head>
 <body>
   <div id="app">
-
-
     <header class="sticky-top">
       <div class="d-flex align-items-center h-100">
         <nav class="d-flex align-items-center justify-content-center">
@@ -165,18 +163,20 @@
                 </div>
                 <div>{{juguete.stock}}</div>
 
-                <!-- aniade producto al carrito restandole uno a su stock (en carrito!, en productos no se actuliza el stock hasta q la compra se complete) -->
-                <div v-if="!juguete.estadoAgregado">
-                  <button id="botonAgregar" class="btn btn-primary  btn-sm" v-on:click="aniadirACarrito(juguete)" >Agregar al carrito 🛒</button>
+                <div v-if="juguete.stock > 0">
+                  <button id="botonAgregar" class="btn btn-primary  btn-sm" v-on:click="aniadirACarrito(juguete)" v-if="!juguete.estadoAgregado">Agregar al carrito 🛒</button>
+                  <button id="botonAgregado" class="btn btn-primary btn-sm" disabled v-else>Agregado al carrito ✔</button>
                 </div>
-                <button v-else id="botonAgregado" class="btn btn-primary btn-sm" disabled>Agregado al carrito ✔</button>
-
+                <div v-else>
+                  <button v-else id="botonSinStock" class="btn btn-primary btn-sm" disabled>Sin Stock</button>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-  </main>
+    </main>
+  </div>
   <a href="https://www.instagram.com/mindhub_la/" class="btn-wsp position-fixed d-flex align-items-center justify-content-center" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
