--- a/contacto.html
+++ b/contacto.html
@@ -95,7 +95,10 @@
     </div>
 </header>
   <main>
-
+    <div id="divGeneralContacto">
+      <div id="divImagenContactanos">
+        <img src="./images/imagenContactanos.png" id="imagenHorarios" alt="horarios de contacto">
+      </div>
 
       <div class="d-flex justify-content-center mt-3 p-3" v-if="mostrarSaludo == false">
         <form id="formulario" v-on:submit.prevent="mostrarCartelito">
@@ -185,6 +188,7 @@
       </div>
       
     </div>
+  </div>
   </main>
   <a href="https://www.instagram.com/mindhub_la/" class="btn-wsp position-fixed d-flex align-items-center justify-content-center" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
