--- a/farmacia.html
+++ b/farmacia.html
@@ -90,11 +90,11 @@
                     <h5 id="offcanvasRightLabel">Carrito</h5>
                     <thead>
                       <tr>
-                        <th scope="col">Nombre</th>
+                        <th scope="col">Nombre de producto</th>
                         <th scope="col">Precio</th>
                         <th scope="col">Unidades</th>
-                        <th scope="col">subtotal</th>
-                        <th scope="col">eliminar</th>
+                        <th scope="col">Subtotal</th>
+                        <th scope="col">Eliminar</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -127,7 +127,7 @@
                   </div>
                   <!-- boton de Finalizar Compra -->
                   <div class="d-flex justify-content-center align-items-center mt-1">
-                    <button class="btn btn-primary " data-bs-dismiss="offcanvas" aria-label="Close" v-on:click="finalizarCompra">Finalizar Compra</button>
+                    <button id="botonFinalizarCompra" class="btn  " data-bs-dismiss="offcanvas" aria-label="Close" v-on:click="finalizarCompra">Finalizar Compra</button>
                   </div>
 
                 </div>
@@ -142,7 +142,7 @@
   <!-- muestra cards estaticas de compra -->
   <div class="d-flex justify-content-center">
     <div class="d-flex justify-content-between row gap-3 w-75 pb-5">
-      <div id="tarjetas1" class="card mt-5" style="width: 302px; height: 500px" v-for="medicamento in medicamentos">
+      <div id="tarjetas1" class="card mt-5" style="width: 302px; height: 480px" v-for="medicamento in medicamentos">
         <img v-bind:src="medicamento.imagen" class="card-img-top align-self-center  pt-3" style="width: 250px; height: 250px;" alt="...">
         <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
 
@@ -152,14 +152,14 @@
           </div>
           <!-- <div class="productoAgotado d-flex justify-content-center align-items-center rounded"> Producto Agotado</div> -->
 
-          <h5 class="card-title">{{medicamento.nombre}}</h5>
-          <p class="card-text">$ {{medicamento.precio}}</p>
+        <p  class="card-title">{{medicamento.nombre}}</p>
+          <h5  class="card-text">$ {{medicamento.precio}}</h5>
           <div class="btn-group dropend">
-            <button class="btn btn-secondary btn-sm dropdown-toggle bg-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <button id="descripcionButton" class="btn btn-secondary btn-sm dropdown-toggle bg-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 
               Ver descripcion
             </button>
-            <ul class="dropdown-menu" style="width: 300px;"> 
+            <ul class="dropdown-menu" id="descripcionProduct" style="width: 300px;"> 
               <li class="cart-text">{{medicamento.descripcion}}</li>
             </ul>
           </div>
