--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                     <div class="offcanvas-body">
                 <div class="offcanvas-header">
-                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button  type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                     <table class="table table-hover">
                             <h5 id="offcanvasRightLabel">Carrito</h5>
@@ -133,21 +133,21 @@
                   </div>
             </div>
 
-  <div>
-    
-  </div>
+  <div id="textoAnimado">
+
+  </div
             <div class="d-flex justify-content-center">
-              <div class="d-flex justify-content-between row gap-4 w-35 pb-5">
-              <div id="tarjetas" class="card mt-5" style="width: 302px; height: 500px" v-for="producto in productosMenosStock">
-                <img v-bind:src="producto.imagen" class="card-img-top align-self-center pt-3" style="width: 250px; height: 250px;" alt="...">
+              <div class="d-flex justify-content-between row gap-auto w-35 pb-5 m-3">
+              <div id="tarjetas" class="card mt-5" style="width: 282px; height: 480px" v-for="producto in productosMenosStock">
+                <img v-bind:src="producto.imagen" class="card-img-top align-self-center pt-3" style="width: 230px; height: 230px;" alt="...">
                 <div class="card-body d-flex justify-content-between align-items-center flex-column"  >
-                  <h5 class="card-title" >{{producto.nombre}}</h5>
-                  <p class="card-text">Precio: ${{producto.precio}}</p>
+                 <p class="card-title" >{{producto.nombre}}</p>
+                 <h5   class="card-text">Precio: ${{producto.precio}}</h5>
                   <div class="btn-group dropend">
-                    <button class="btn btn-secondary btn-sm dropdown-toggle bg-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button id="descripcionButton" class="btn  btn-sm dropdown-toggle bg-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Ver descripcion
                     </button>
-                    <ul class="dropdown-menu" style="width: 100px;"> 
+                    <ul id="descripcionProduct" class="dropdown-menu" style="width: 100px;"> 
                       <li class="cart-text">{{producto.descripcion}}</li>
                     </ul>
                   </div>
@@ -162,13 +162,13 @@
               <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-inner ">
                     <div class="carousel-item active" data-bs-interval="10000">
-                      <img src="./images/carusel 1.png" class="d-block w-100" alt="...">
+                      <img src="./images/nuevoCarrusel1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                      <img src="./images/carusel 2.png" class="d-block w-100" alt="...">
+                      <img src="./images/nuevoCarrusel2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="./images/carusel 3.png" class="d-block w-100 " alt="...">
+                      <img src="./images/nuevoCarrusel3.png" class="d-block w-100 " alt="...">
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -194,7 +194,7 @@
           <img src="./images/carita naranja.png" id="caritaPerroFooter" alt="logo franco pet shop pequeño">
         </div>
         <div class="d-flex row col-3">
-          <a href="./index.html" class="titulo_footer" >Tienda</a>
+          <a href="./juguetes.html" class="titulo_footer" >Tienda</a>
         
             <a href="./farmacia.html" >Farmacia</a>
             <a href="./juguetes.html">Juguetes</a>
