--- a/farmacia.html
+++ b/farmacia.html
@@ -89,7 +89,19 @@
                   <div class="offcanvas-header">
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
-                  <p>El carrito esta vacio</p>
+                  <table class="table table-hover">
+                    <h5 id="offcanvasRightLabel">Carrito</h5>
+                    <thead>
+                      <tr>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Precio</th>
+                        <th scope="col">Unidades</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      
+                    </tbody>
+                  </table>
                 </div>
 
                 <div v-else>
